<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AES.AESFragment">

    <TextView
        android:id="@+id/text_aes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/outputAES"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputMessageAES"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:hint="@string/set_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputKeyAES"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:hint="@string/set_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputIvAES"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:hint="@string/set_Iv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <RadioGroup
        android:layout_width="403dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">

        <RadioButton
            android:id="@+id/encodeAES"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:text="@string/encode" />

        <RadioButton
            android:id="@+id/decodeAES"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:text="@string/decode" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAES"
        android:layout_width="237dp"
        android:layout_height="49dp"
        android:text="@string/execute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />
</androidx.constraintlayout.widget.ConstraintLayout>